--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -18,7 +18,7 @@ body {
     padding: 30px;
     background: transparent;
     border: 2px white solid;
-    backdrop-filter: blur(13px);
+    backdrop-filter: blur(15px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,7 +31,7 @@ body {
       font-size: 2.5em;
       margin-bottom: 20px;
       background-position: center;
-      -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
