feat: creating a header styles

--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/Global.scss';
 
 .containerLogin {
-  background-image: url('../../../assets/sound-waves.gif');
+  background-image: url('../../assets/sound-waves.gif');
   background-position: center;
   background-size: cover;
   display: flex;
