--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,7 +1,78 @@
+@import '../../styles/Global.scss';
+
 .header {
-  h1 {
+  display: flex;
+  height: 5.5em;
+  justify-content: space-between;
+  padding: 0px 30px 0px 110px;
+  align-items: center;
+  background: black;
+
+  #logoBox {
     display: flex;
-    flex-direction: column;
-    text-align: center;
+    flex-direction: row;
+    background: $text-logo;
+    background-position: center;
+    background-clip: text;
+    font-size: 2em;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 55%;
+    color: white;
+    font-family: 'Golos Text', sans-serif;
+    font-weight: 600;
+    gap: 2em;
+
+    #navBox {
+      display: flex;
+      width: 70%;
+      justify-content: space-evenly;
+      align-items: center;
+      border-right: 2px solid white;
+      height: 3em;
+
+      a {
+        text-decoration: none;
+
+        &:hover {
+          color: $rose-color;
+        }
+      }
+
+    }
+
+    #navLinkBox {
+      display: flex;
+      align-items: center;
+
+      #navIcons {
+        width: 2em;
+        height: 2em;
+        pointer-events: none;
+      }
+    }
+
+    #profilePicture {
+      margin-right: 20px;
+      border-radius: 3em;
+      border: 5px solid white;
+      width: 3.6em;
+      height: 3.6em;
+    }
+
+    #profileIcon {
+      margin-right: 20px;
+      border: 5px solid white;
+      border-radius: 3em;
+      width: 3.6em;
+      height: 3.6em;
+      color: white;
+      pointer-events: none;
+    }
   }
 }
