--- a/src/pages/HomePage/styles.module.scss
+++ b/src/pages/HomePage/styles.module.scss
@@ -40,3 +40,49 @@
     }
   }
 }
+
+.containerBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 80vh;
+  font-family: 'Golos Text', sans-serif;
+
+
+  h2 {
+    font-size: 3em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
+
+  .containerCards {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+
+    .card {
+      display: flex;
+      flex-direction: column;
+      gap: 2.5em;
+      align-items: center;
+      text-align: center;
+      box-shadow: 0em 0em 1em -7px black;
+      border-radius: 1em;
+      height: 50vh;
+      width: 20vw;
+      padding: 1em;
+
+      ion-icon {
+        background: $text-logo;
+        border-radius: 0.2em 0.2em 0em 0em;
+        border: 1px solid black;
+        width: 100%;
+        font-size: 5em;
+        height: 2em;
+        pointer-events: none;
+      }
+    }
+  }
+}
