--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -76,3 +76,50 @@
     }
   }
 }
+
+.navHome {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 19%;
+  color: white;
+  font-family: "Golos Text", sans-serif;
+  font-weight: 600;
+  gap: 2em;
+
+  #navBoxHome {
+    display: flex;
+    width: 70%;
+    justify-content: space-evenly;
+    align-items: center;
+    border-right: 2px solid white;
+    height: 3em;
+
+    a {
+      text-decoration: none;
+
+      &:hover {
+        color: $rose-color;
+      }
+    }
+
+  }
+
+  a {
+    text-decoration: none;
+    &:hover {
+      color: $rose-color;
+    }
+  }
+  #navLinkBoxHome {
+    display: flex;
+    align-items: center;
+    
+
+    #navIconsHome {
+      width: 2em;
+      height: 2em;
+      pointer-events: none;
+    }
+  }
+}
