--- a/src/pages/HomePage/styles.module.scss
+++ b/src/pages/HomePage/styles.module.scss
@@ -18,26 +18,30 @@
     flex-direction: column;
     font-size: 1.4em;
     text-align: center;
-    padding: 3.4em 8em 0em 0em;
+    padding: 3.4em 5.5em 0em 0em;
     gap: 2em;
 
-    input {
-      color: white;
-      border: 0.3em solid white;
-      outline: none;
-      background: transparent;
-      height: 4em;
-      border-radius: 3em;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 0.75em;
-      transition: all 350ms ease-in-out;
+    a {
+      input {
+        color: white;
+        border: 0.3em solid white;
+        outline: none;
+        background: transparent;
+        height: 4em;
+        width: 18em;
+        border-radius: 3em;
+        cursor: pointer;
+        font-weight: bold;
+        font-size: 0.75em;
+        transition: all 350ms ease-in-out;
   
-      &:hover {
-        background: white;
-        color: black;
+        &:hover {
+          background: white;
+          color: black;
+        }
       }
     }
+    
   }
 }
 
