--- a/src/pages/HomePage/styles.module.scss
+++ b/src/pages/HomePage/styles.module.scss
@@ -1,5 +1,9 @@
 @import '../../styles/Global.scss';
 
+.page {
+  background: white;
+}
+
 .containerHome {
   height: 45vh;
   background: $text-logo;
