--- a/src/pages/Search/styles.module.scss
+++ b/src/pages/Search/styles.module.scss
@@ -1,6 +1,27 @@
 .pageSearch {
   display: flex;
+  flex-direction: column;
   gap: 2em;
+
+  .inputHeader {
+    margin-left: 17.6vw;
+    height: 10vh;
+    display: flex;
+    background: #0000005e;
+  }
+
+  .searchContainer {
+    display: flex;
+    margin-left: 17em;
+    margin-right: 1.9em;
+
+    .albumContainer {
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+      color: white;
+    }
+  }
+
 }
 
 .albums {
