--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -5,6 +5,13 @@ $background-color-gradient: linear-gradient(180deg, rgba(49,49,49,1) 3%, rgba(37
 $cyan-color: #00ffff;
 $rose-color: #dd00ff;
 
+body {
+    line-height: 1;
+    height: 100vh;
+    background: rgb(62,62,62);
+    background: $background-color-gradient
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -30,11 +37,6 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
     display: block;
-}
-body {
-    line-height: 1;
-    background: rgb(62,62,62);
-    background: $background-color-gradient
 }
 ol, ul {
     list-style: none;
