--- a/src/pages/Search/styles.module.scss
+++ b/src/pages/Search/styles.module.scss
@@ -7,18 +7,77 @@
     margin-left: 17.6vw;
     height: 10vh;
     display: flex;
+    align-items: center;
+    gap: 1em;
+    padding: 0em 3em;
     background: #0000005e;
+
+    input {
+      height: 4vh;
+      width: 25vw;
+      outline: none;
+      padding-left: 1em;
+      border: none;
+      border-radius: 0.7em;
+      position: relative;
+    }
+
+    button {
+      position: absolute;
+      left: 42.7em;
+      height: 4vh;
+      border-radius: 0.7em;
+      border: none;
+      background-color: #252525;
+      color: white;
+      cursor: pointer;
+
+      &:disabled {
+        opacity: 0.7;
+        cursor: auto;
+      }
+    }
   }
 
   .searchContainer {
     display: flex;
-    margin-left: 17em;
-    margin-right: 1.9em;
+    margin-right: 3em;
 
     .albumContainer {
       display: grid;
       grid-template-columns: auto auto auto auto;
+      grid-gap: 1em;
       color: white;
+
+      a {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #313131;
+        justify-content: space-evenly;
+        width: 13em;
+        height: 14em;
+        border-radius: 0.5em;
+        padding: 1em;
+        text-decoration: none;
+
+        img {
+          border-radius: 0.5em;
+        }
+
+        h4 {
+          text-align: center;
+        }
+
+        p {
+          text-align: center;
+        }
+
+        &:hover {
+          scale: 1.02;
+          box-shadow: 0px 0px 3px 0.5px white;
+        }
+      }
     }
   }
 
@@ -27,4 +86,6 @@
 .albums {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
+  justify-content: flex-end;
 }
